--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <script src="https://api-std.mainpay.co.kr/js/mainpay.pc-1.1.js"></script>
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 <head>
     <style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
@@ -146,7 +147,7 @@
 									<div class="myd-box-2">
 										<table class="mstyle-2">
 											<tr>
-												<th><span class="my-red">부가서비스(필수)</span></th>
+												<th><span class="my-red">판매자 부가서비스(필수)</span></th>
 												<td class="pd_t17">
 													<div class="selec-box bg-st">
 														<select class="selectpicker" id="sbx_trnsprtTypCd" style="min-width:300px !important;">
