--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
@@ -188,7 +188,7 @@
 									<div class="myd-box-2">
 										<table class="mstyle-2">
 											<tr>
-												<th><span class="my-red">부가서비스(필수)</span></th>
+												<th><span class="my-red">구매자 부가서비스(필수)</span></th>
 												<td class="pd_t17">
 													<div class="selec-box bg-st">
 														<select class="selectpicker" id="sbx_trnsprtTypCd" style="min-width:300px !important;">
