--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_info.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_info.html
@@ -135,7 +135,7 @@
 											var file = null;
 											
 											const formData = new FormData();
-											
+											formData.append("url", "dealingart/artist/"+sMbrSqVal);
 											if (fileObject != null) {
 												// 파일 Drag 이용하여 등록시
 												file = fileObject[0];
