--- a/src/main/resources/templates/thymeleaf/footer.html
+++ b/src/main/resources/templates/thymeleaf/footer.html
@@ -36,6 +36,9 @@
 							<li>통신판매업 신고 : 제 2019-서울마포-1063호</li>
 							<li>개인정보관리책임자 : 이영선(help@dealing-art.com),이영중(privacy@dealing-art.com)</li>
 							<li>이메일 : cafe24@mainsion9.co,kr</li>
+							<li class="af-dn">개인정보관리책임자</li> 
+							<li> - 이영선(help@dealing-art.com) </li>
+							<li> - 이영중(privacy@dealing-art.com)</li>
 						</ol>
 					</div>
 				</div>
