--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -24,14 +24,17 @@
 						<div class="me-left">
 							<div class="med">
 								<h2 class="">거래정보</h2>
-								<div class="med-ic">
-									<div class="por">
+									<div class="med-ic">
+										<div class="por d_i_b">
 										<div class="tootip-4">거래 계약 안내</div>
-										<img src="resources/img/mypage/icon-1.png" class="med-me" />
-										<a href="javascript:openWorkGrtUrl();" class="mg_l30 por"><div class="tootip-2">보증서 보기</div><img src="resources/img/de/print-icon.jpg"/></a>
+										<img src="resources/img/mypage/icon-1.png" class="med-me">
+									</div>
+									<div class="por d_i_b mg_l30">
+										<a href="javascript:openWorkGrtUrl();" class="mg_l30 por">
+										<div class="tootip-2">보증서 보기</div>
+										<img src="resources/img/de/print-icon.jpg"></a>
 									</div>
 								</div>
-							</div>
 							<div class="myd-box">
 								<div class="myd-img">
 									<img th:src="${result.dealInfo.workMainImgUrl}" />
@@ -355,7 +358,7 @@
 				<div class="baegs">
 					<h2>주소 변경</h2>
 				    <img src="resources/img/ba/icon-3.png" class="con-img" />
-				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end.png" /></div>
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end_1.png" /></div>
 				</div>
 			</div>
 			<div class="modal-body login-body">
