--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -1517,8 +1517,6 @@ columns2 figure {
     /* padding-top: 24px; */
 }
 
-.mg_t50{margin-top:50px;}
-
 .reds-box{
     margin-bottom: 16px;
 }
@@ -5128,3 +5126,7 @@ position: relative;background-color: #fbfbfb;}
 
 /* 0610 */
 .pb_10 {padding-bottom:10px;}
+
+/* 0617*/
+.modal-s{padding: 0 !important; overflow: scroll;}
+
