--- a/src/main/resources/static/css/ui_tablet.css
+++ b/src/main/resources/static/css/ui_tablet.css
@@ -683,7 +683,7 @@ html, body{font-size: calc(100vw / 152);}
 .modal-sech .modal-content .modal-header button{}
 
 .modal-sech .modal-content .modal-body{}
-.modal-s{padding:0 !important;}
+.modal-s{padding:0 !important; overflow: scroll;}
 
 #columns{
         column-width: 34.3rem;
@@ -1085,9 +1085,8 @@ html, body{font-size: calc(100vw / 152);}
 .con-left2{
     width: auto;
     padding-right: 100px;
-    display: block;
     vertical-align: top;
-    /* display: none; */
+    display: none;
     padding: 0;
 }
 .con-right2{
@@ -1287,15 +1286,15 @@ columns2 figure {
 
 .item-ho{display:none;position: absolute;top: 50%;width: 100%;text-align: center;/* height: 100%; */transform: translateY(-50%);z-index: 1;}
 .item-ho:after{content:'';}
-.item-ho p{font-size: 1.6rem;padding-bottom: 0.3rem;color: rgb(255 255 255 / 80%);}
+.item-ho p{font-size: 3.6rem;padding-bottom: 0.3rem;color: rgb(255 255 255 / 80%);}
 .item-ho ul{padding-top: 0.8rem;width: 100%;}
-.item-ho ul li{font-size: 1.8rem;display: inline-block;color: rgb(255 255 255 / 80%);padding-right: 2.7rem;position: relative;line-height: 1.3;}
-.item-ho ul li:after{content:':';position: absolute;top: 0;right: 1.1rem;font-size: 1.8rem;}
+.item-ho ul li{font-size: 3.2rem;display: inline-block;color: rgb(255 255 255 / 80%);padding-right: 2.7rem;position: relative;line-height: 1.3;}
+.item-ho ul li:after{content:':';position: absolute;top: 0;right: 1.1rem;font-size: 2.8rem;}
 .item-ho ul li:last-child:after{content:''; display:none;}
 .item-ho ul li:last-child{padding-right:0;}
-.item-ho ul li span{font-size: 1.3rem;display: block;}
+.item-ho ul li span{font-size: 3.2rem;display: block;}
 .item-ho h4{
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 600;
     color: #fff300;
     padding-top: 2.2rem;
@@ -1363,13 +1362,13 @@ columns2 figure {
     padding: 0.2rem 0 0px 0;
 vertical-align: middle;}
 
-.reds-box ul li a:after{content:'';width: 3rem;height: 1.9rem;background-size: 100%;position: absolute;right: 0;top: 50%;background-repeat: no-repeat;margin-top: -0.9rem;}
+.reds-box ul li a:after{content:'';width: 1.5rem;height: 1.4rem;background-size: 100%;position: absolute;right: 2rem;top: 50%;background-repeat: no-repeat;transform: translateY(-50%);}
 .reds-box ul li a.up-on{
     color: #333;
 }
 .reds-box ul li a.up-on:after{content:'';background-image: url(../img/de/up-a.png);top: 50%;}
 .reds-box ul li a.down-on{color: #333;}
-.reds-box ul li a.down-on:after{content:'';background-image: url(../img/de/down-a.png);top: 65%;background-size: 1.6rem 1.4rem;transform: translateY(-50%);}
+.reds-box ul li a.down-on:after{content:'';background-image: url(../img/de/down-a.png);top: 50%; transform: translateY(-50%);}
 
 
 .drop-ul{
@@ -1970,6 +1969,7 @@ input[type="radio"]:checked + label span {
     -webkit-box-orient: vertical;
     word-wrap:break-word;
     height: 22.8rem;
+    width:100%;
 }
 
 .artist-wrap{
@@ -2168,7 +2168,17 @@ input[type="radio"]:checked + label span {
     right: -1.8rem;
     transform: translateY(-50%);
 }
-.tootip-2{background:#333333;font-size: 2rem;padding: 1.3rem 1.3rem;color: #fff;border-radius: 10px;position: absolute;left: -0.9rem;top: -6.3rem;width: 15.8rem;text-align: center;}
+.tootip-2{background: #333333;
+    font-size: 2rem;
+    padding: 0.7rem 1.3rem;
+    color: #fff;
+    border-radius: 10px;
+    position: absolute;
+    left: -0.9rem;
+    top: -6.3rem;
+    width: 15.8rem;
+    text-align: center;
+}
 .tootip-2:after{
     content:'';
     width: 0px;
@@ -2197,7 +2207,17 @@ input[type="radio"]:checked + label span {
     transform: translateX(-50%);
 }
 
-.tootip-4{background:#333333;font-size: 2.2rem;padding: 0.7rem 1.3rem;color: #fff;border-radius: 10px;position: absolute;left: 50%;bottom: 4.4rem;width: 23rem;text-align: center;transform: translateX(-50%);}
+.tootip-4{background: #333333;
+    font-size: 2rem;
+    padding: 0.7rem 1.3rem;
+    color: #fff;
+    border-radius: 10px;
+    position: absolute;
+    left: 50%;
+    bottom: 5.1rem;
+    width: 18rem;
+    text-align: center;
+    transform: translateX(-50%);}
 .tootip-4:after{
     content:'';
     width: 0px;
@@ -2328,11 +2348,12 @@ input[type="radio"]:checked + label span {
 .wd-185{width: 30rem;}
 .med-ic{
     position: absolute;
-    right: 0.5rem;
+    left: 20.5rem;
     bottom: 1.4rem;
 }
 .di-b{display:inline-block;}
 .mg_l50{margin-left:50px;}
+.mg_l100{margin-left:10rem;}
 .c-red{
     color: #e9625c !important;
 }
@@ -5098,6 +5119,8 @@ position: relative;background-color: #fbfbfb;}
 
 .is-sum button.is-bg{background: #e9625c;color: #fff;border: #c9504b 1px solid;margin-left: 3px;}
 .mg_b10{margin-bottom:10px;}
+.mg_b20{margin-bottom:20px;}
+.mg_b30{margin-bottom:30px;}
 
 .filebox .upload-name2 {
 	display: inline-block;
