--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -456,7 +456,7 @@ function artistLibraryList(){
 $(document).on("click", ".swiper-slide", function(){
 	var artstSq= $(this).attr("artstSq");
     
-	location.href = "/artistDetail?artstSq="+artstSq 
+	location.href = "/artistDetail?artstSq="+artstSq;
 	
 	/*
 	pageGoPost({
