--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -286,8 +286,8 @@ function myWorkList(){
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				html += '	<div class="item-ho3 reg-div">';
 				html += '		<div class="regs" >';
-				html += '			<a href="#" class="reg-a" workSq="'+ result[i].workSq +'"><span>거래 등록</span></a>';
-				html += '			<a href="#" class="cor-a" workSq="'+ result[i].workSq +'"><span>작품 수정</span></a>';
+				html += '			<a href="#" class="reg-a" workSq="'+ result[i].workSq +'" onclick="dealReg(this)"><span>거래 등록</span></a>';
+				html += '			<a href="#" class="cor-a" workSq="'+ result[i].workSq +'" onclick="myWorkMod(this)"><span>작품 수정</span></a>';
 				html += '		</div>';
 				html += '	</div>';
 				html += '</div>';
@@ -366,20 +366,15 @@ setInterval(function() {
 	 }
  }).resize();
 
-$(document).on("click", ".cor-a", function(){
-	var workSq= $(this).attr("workSq");
-    pageGoPost({
-		url:"/myWorkMod",
-		target:"_self",
-		vals:[
-			["workSq", workSq]
-		]
-	});
-});
+function myWorkMod(obj){
+	var workSq = obj.getAttribute("workSq");
+	location.href = "/myWorkMod?workSq="+workSq;
+}
 
-$(document).on("click", ".reg-a", function(){
-	location.href = "/dealReg?workSq="+$(this).attr("workSq")+"&&mbrSq="+sMbrSqVal+"&&workTypCd=WORK";
-});
+function dealReg(obj){
+	var workSq = obj.getAttribute("workSq");
+	location.href = "/dealReg?workSq="+workSq+"&&mbrSq="+sMbrSqVal+"&&workTypCd=WORK";
+}
 
 $(document).on("click", ".heart", function(){
 	var param = new Object();
